--- a/src/sass/pages/_services.scss
+++ b/src/sass/pages/_services.scss
@@ -196,8 +196,10 @@ html.modal-open body {
     background: #fff;
   }
   .my-orgs {
-    margin-top: 4.0em;
     margin-bottom: 0.625em;
+    @include media(tablet) {
+      margin-top: 4.0em;
+    }
   }
   .wrapper {
     background: lighten($light-blue, 50%);
