--- a/src/sass/pages/_services.scss
+++ b/src/sass/pages/_services.scss
@@ -80,7 +80,7 @@
       margin-left: 5px;
       position: relative;
     }
-    a.service-link {
+    div.service-link {
       display: block;
       border-left: 5px solid $govuk-blue;
       padding: 15px;
