review-answers-approver-styling

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -13,6 +13,7 @@
 @import "footer";
 @import "help";
 @import "support";
+@import "check-your-answers";
 
 @import "pages/services";
 @import "pages/search-results";
