--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -122,3 +122,19 @@ nav.subnav {
     opacity: 1;
   }
 }
+
+ul.dashed {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 1em;
+}
+ul.dashed > li:before {
+  display: inline-block;
+  content: "- ";
+  width: 1em;
+  margin-left: -1em;
+}
+
+li.list-item {
+  padding-top: 7.5px;
+}
