--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -123,18 +123,18 @@ nav.subnav {
   }
 }
 
-ul.dashed {
-  list-style: none;
-  margin-left: 0;
-  padding-left: 1em;
-}
 ul.dashed > li:before {
-  display: inline-block;
-  content: "- ";
-  width: 1em;
-  margin-left: -1em;
+  content: '\2014';
+  margin-left: -25px;
+  padding-right: 5px;
 }
 
 li.list-item {
   padding-top: 7.5px;
+  margin-left: 25px;
+  padding-right: 25px;
+}
+
+p.contents-header {
+  margin-bottom: 2px;
 }
