manage-orgs styling

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -14,7 +14,7 @@
 @import "help";
 @import "support";
 @import "check-your-answers";
-
+@import "manage-orgs";
 @import "pages/services";
 @import "pages/search-results";
 @import "pages/splash";
