manage config form styling

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -138,3 +138,9 @@ li.list-item {
 p.contents-header {
   margin-bottom: 2px;
 }
+
+form#form-service-config {
+  input, textarea{
+    width: 75%
+  }
+}
