banner form input sizes

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -371,8 +371,8 @@ form.show-filters {
   }
 }
 
-form#form-service-config {
-  .inputConfig {
+form#form-service-config, form#form-new-banner {
+  .inputConfig, .banner-input {
     width: 75%
   }
 }
