manage dashboard styling

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -24,6 +24,46 @@ a.card {
   }
 }
 
+.manage-card, .manage-card-disabled {
+  padding: 15px;
+  border-right: none;
+  border-left: 5px solid $department-for-education-websafe;
+  h2 {
+    font-weight: bold;
+    font-size: 110%;
+    position: relative;
+    color: #005ea5;
+  }
+  p {
+    margin-bottom: 3px;
+    position: relative;
+  }
+}
+
+div.manage-card {
+  display: block;
+  text-decoration: none;
+  color: $text-colour;
+  background: #F8F8F8;
+  @include simple-animation;
+  &:hover {
+    border-left-width: 10px;
+    padding-left: 10px;
+    background: #f5f5f5;
+  }
+}
+
+div.manage-card-disabled {
+  display: block;
+  text-decoration: none;
+  color: $text-colour;
+  background: #F8F8F8;
+
+  h2 {
+    color: $text-colour;
+  }
+}
+
 nav.subnav {
   ul {
     list-style: none;
