--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -33,6 +33,7 @@ a.card {
     font-size: 110%;
     position: relative;
     color: #005ea5;
+    margin-top: 5px;
   }
   p {
     margin-bottom: 3px;
