show hide password

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -143,18 +143,8 @@ div.show-password {
       }
     }
     input {
-      border: 1px solid transparent;
-      background-color: transparent;
-      outline: none;
+      opacity: 0;
       position: absolute;
-      width: 1px;
-      height: 1px;
-      margin: 0;
-      margin-top: 4px;
-
-      :focus + label {
-        background-color: #ffbf47
-      }
     }
     &.type-password {
       label {
