--- a/src/sass/pages/_requests.scss
+++ b/src/sass/pages/_requests.scss
@@ -34,3 +34,41 @@
     }
   }
 }
+
+.requestV2 {
+  padding: 15px;
+  background: $grey-4;
+  margin-bottom: 10px;
+  position: relative;
+  border: 1px solid $grey-3;
+  border-left: 5px solid $grey-3;
+
+  p {
+    margin: 0;
+    width: 50%;
+    @include media(tablet) {
+      width: 80%;
+    }
+    a {
+      font-weight: bold;
+    }
+  }
+  .button-respond {
+    padding: 5px 15px;
+    border-left: 1px solid #dee0e2;
+    margin-top: 10px;
+    background: #f8f8f8;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .pnl {
+    border: none;
+    padding: 0 0 1px;
+  }
+  .respond {
+    .form-submit {
+      margin-bottom: 0;
+    }
+  }
+}
