--- a/src/sass/pages/_requests.scss
+++ b/src/sass/pages/_requests.scss
@@ -44,23 +44,26 @@
   border-left: 5px solid $grey-3;
 
   p {
-    margin: 0;
-    width: 50%;
     @include media(tablet) {
-      width: 80%;
+      margin: 0;
+      width: 75%;
     }
     a {
       font-weight: bold;
     }
   }
   .button-respond {
-    padding: 5px 15px;
-    border-left: 1px solid #dee0e2;
-    margin-top: 10px;
-    background: #f8f8f8;
-    position: absolute;
-    top: 0;
-    right: 0;
+    @include media(tablet) {
+      padding: 5px 15px;
+      border-left: 1px solid #dee0e2;
+      margin-top: 10px;
+      background: #f8f8f8;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+    display: inline-block;
+    margin: 5px 0 0;
   }
   .pnl {
     border: none;
