NSA-2388 Self-Registration - Task Tracker - CSS changes

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -19,6 +19,7 @@
 @import "pages/search-results";
 @import "pages/splash";
 @import "pages/requests";
+@import "pages/task-list";
 
 html, body {
   background: $grey-3;
