--- a/src/sass/pages/_task-list.scss
+++ b/src/sass/pages/_task-list.scss
@@ -71,6 +71,8 @@ $task-list-indent: 35px;
   float: right;
   margin-right: 0;
   padding-top: 3px;
+  min-width: 105px;
+  text-align: center;
 }
 
 .task-pending {
@@ -83,4 +85,3 @@ $task-list-indent: 35px;
 .pending-task {
   color: #6f777b;
 }
-
