--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -1,36 +1,1 @@
-.global-cookie-message-dfe-sign-in {
-    display: none;
-    background-color: #FFFFFF;
-    margin: 0 auto;
-    &__cookie-message-container {
-        &.govuk-body,.govuk-body-m {
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            font-weight: 400;
-            font-size: 16px;
-            font-size: 1rem;
-            line-height: 1.25;
-            margin-top: 0;
-            margin-bottom: 15px;
-            @media print {
-                color: #000;
-                font-family: sans-serif;
-                font-size: 14pt;
-                line-height: 1.15;
-            }
-            
-            @media (min-width: 40.0625em) {
-                font-size:19px;
-                font-size: 1.1875rem;
-                line-height: 1.3157894737;
-                margin-bottom:20px;
-            }
-        }
-    }
-    .button {
-        &--govuk {
-            margin-bottom: 20px;
-            width: 100%;
-        }
-    }
-}
+@import 'cookie-banner';
