--- a/src/sass/components/_cookie-banner.scss
+++ b/src/sass/components/_cookie-banner.scss
@@ -31,6 +31,7 @@
         &--govuk {
             margin-bottom: 20px;
             width: 100%;
+            text-align: center;
         }
     }
 }
