add updated dist styles and html markup

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -13,7 +13,7 @@
             </h2>
             <p class="dfe-sign-in__cookie-message-container govuk-body">
                 We use cookies to
-                <a href="#">collect information</a>
+                <a href="/cookies">collect information</a>
                 about how you use DfE Sign in.
                 We use this information to improve our services
                 and to make this website work as efficently as possible.
@@ -25,9 +25,9 @@
                     </button>
                 </div>
                 <div class="column-one-half">
-                    <button class="button button--govuk" type="submit">
+                    <a class="button button--govuk" href="/cookies">
                         Set cookie preferences
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
