vendors bundled in gulp

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="global-cookie-message-dfe-sign-in" style="display: block">
+<div class="global-cookie-message-dfe-sign-in">
     <div class="grid-row">
         <div class="column-two-thirds">
             <h2 class="heading-medium heading-medium--govuk">
@@ -20,7 +20,7 @@
             </p>
             <div class="grid-row">
                 <div class="column-one-half">
-                    <button class="button button--govuk" type="submit">
+                    <button class="button button--govuk cookie-accept">
                         Accept all cookies
                     </button>
                 </div>
