--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -108,6 +108,7 @@
 
 <script src="/static/javascript/vendors/jquery.js"></script>
 <script src="/static/javascript/vendors/select2.min.js"></script>
+<script type="text/javascript" src="/static/javascript/vendors/vendors.min.js"></script>
 <script src="/static/javascript/app.min.js"></script>
 
 
