add column full for margin

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="global-cookie-message-dfe-sign-in">
+<div class="global-cookie-message-dfe-sign-in column-full">
     <div class="grid-row">
         <div class="column-two-thirds">
             <h2 class="heading-medium heading-medium--govuk">
