finish styles for banner

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -4,14 +4,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
 <div class="global-cookie-message-dfe-sign-in column-full">
-    <div class="grid-row">
+    <div class="grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
         <div class="column-two-thirds">
             <h2 class="heading-medium heading-medium--govuk">
                 Tell us whether you accept cookies
             </h2>
-            <p class="dfe-sign-in__cookie-message-container govuk-body">
+            <p class="govuk-body govuk-body--shim">
                 We use cookies to
                 <a href="/cookies">collect information</a>
                 about how you use DfE Sign in.
