change specificity on scss rule

--- a/src/sass/components/_cookie-banner.scss
+++ b/src/sass/components/_cookie-banner.scss
@@ -3,7 +3,7 @@
   padding: 20px 0;
   .js-enabled & {
     display: none;
-    .cookie-accept {
+    .button.cookie-accept {
       display: block;
     }
   } 
