add modifier classes for dfe cookie page

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -20,6 +20,7 @@
 @import "pages/splash";
 @import "pages/requests";
 @import "pages/task-list";
+@import "pages/cookies";
 
 html, body {
   background: $grey-3;
