add cookie banner as separate component and add GA utils in vendors

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -1,10 +1,4 @@
-{% set hideHeader = true %}
-{% set hideFooter = true %}
-
-{% extends "layout.html" %}
-
-{% block content %}
-<div class="global-cookie-message-dfe-sign-in column-full">
+<div class="global-cookie-message-dfe-sign-in column-full" id="dsi-cookie-banner">
     <div class="grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
         <div class="column-two-thirds">
             <h2 class="heading-medium heading-medium--govuk">
@@ -32,5 +26,3 @@
         </div>
     </div>
 </div>
-
-{% endblock %}
