--- a/app/views/concepts/components/cookie-banner-example.html
+++ b/app/views/concepts/components/cookie-banner-example.html
@@ -10,6 +10,6 @@
         display: block;
     }
 </style>
-{% include "./cookie-banner.html" %}
+{% include "./cookie-banner.html" ignore missing %}
 
 {% endblock %}
