add interactions locals

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -18,7 +18,7 @@
                     </button>
                 </div>
                 <div class="column-one-half">
-                    <a class="button button--govuk" href="/cookies">
+                    <a class="button button--govuk" href="<%=locals.urls.interactions%>/cookies">
                         Set cookie preferences
                     </a>
                 </div>
