--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -6,7 +6,7 @@
             </h2>
             <p class="govuk-body govuk-body--shim">
                 We use cookies to
-                <a href="/cookies">collect information</a>
+                <a href="<%=locals.urls.interactions || ''%>/cookies">collect information</a>
                 about how you use DfE Sign in.
                 We use this information to improve our services
                 and to make this website work as efficently as possible.
@@ -18,7 +18,7 @@
                     </button>
                 </div>
                 <div class="column-one-half">
-                    <a class="button button--govuk" href="<%=locals.urls.interactions%>/cookies">
+                    <a class="button button--govuk" href="<%=locals.urls.interactions || ''%>/cookies">
                         Set cookie preferences
                     </a>
                 </div>
