remove column full util class

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -1,4 +1,4 @@
-<div class="global-cookie-message-dfe-sign-in column-full" id="dsi-cookie-banner">
+<div class="global-cookie-message-dfe-sign-in" id="dsi-cookie-banner">
     <div class="grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
         <div class="column-two-thirds">
             <h2 class="heading-medium heading-medium--govuk">
