--- a/src/sass/components/_cookie-banner.scss
+++ b/src/sass/components/_cookie-banner.scss
@@ -20,6 +20,7 @@
   }
 
   &__cookie-message-container {
+    color: red;
     margin: 0 auto;
     max-width: 960px;
     @media (min-width: 641px) {
